# ultramcp

./: .clauderc  .dockerignore  .env.claudia  .env.example  .env.langwatch.example  .env.production.example  .env.sam.chat.example  .env.supabase-integration  .gitignore  .last_backup_path  API_KEYS_CONFIGURED.md  API_KEYS_SETUP.md  CLAUDE.md  CLAUDE_CODE_MEMORY_ANALYSIS.md  CLAUDE_STARTUP.md  CLAUDIA_ENHANCEMENT_PLAN.md  CLAUDIA_INTEGRATION_COMPLETE.md  CLAUDIA_MCP_FRONTEND_COMPLETE.md  CONTEXT7_INTEGRATION.md  DEPLOYMENT_SCALING_TODO.md  Dockerfile  Dockerfile.backend  Dockerfile.backend.uv  Dockerfile.devtool  Dockerfile.enterprise  Dockerfile.studio  ENHANCED_COD_SETUP.md  LOCAL_LLM_GUIDE.md  MCP_ARCHITECTURE.md  MCP_ENTERPRISE_110_IMPLEMENTATION.md  MCP_OBSERVATORY_SERVICES_CONNECTION_SOLUTION_COMPLETE.md  MEMORY_ANALYZER_IMPLEMENTATION.md  Makefile  PLAYWRIGHT_MCP_INTEGRATION_GUIDE.md  PRODUCTION_READY_RELEASE.md  README.md  RESOURCE_OPTIMIZATION.md  RISK_MITIGATION.md  SOLUCION_CONFLICTOS_DOMINIOS.md  ULTRAMCP_PORT_MAPPING.md  (+84 more)
adapters/: cod-protocol-adapter.js  enhancedLocalLLMAdapter.js  localLLMAdapter.js  voice-system-adapter.js
api/: gateway.js
api-content/: index.html
backend/: Dockerfile.production  README.md  autonomous_sam_execution.py  ecosystem.config.js  hardcore_training_loop.py  mcp-secure-server.cjs  mcp-secure-server.cjs.backup.orchestration  mcp-secure-server.cjs.backup.telegram  memory_enhanced_reasoning.py  package-lock.json  package.json  test_expanded_model_router.js
backup_complete_20250619_182223/: jest.config.js
backup_complete_20250619_204218/: docker-compose.yml
cloud-virtualization/: DEPLOYMENT_GUIDE.md  README.md  VirtualizationDashboard.tsx  docker-compose.swarm.yml
config/: adapter_config.json
data/: claudia_agents.db  last-claude-session.json  startup-verification-20250703-045519.json
database/: postgresql.conf
docs/: audit_report.md  audit_report_merged_project.md  deployment-guide.md  integration-verification.md
frontend/: package-lock.json  package.json  vite.config.js
frontend-content/: index.html
human_feedback/: hitlManager.js
human_feedback_system/: human_feedback_system.py
k8s/: kustomization.yaml  namespace.yaml
keys/: public_key.pem  trusted_agents.json
langgraph_system/: requirements.txt
local-models/: Dockerfile  MINIMAX_INTEGRATION_REPORT.md  Modelfile.minimax  Modelfile.minimax.compat  deploy-minimax-cloud.sh  docker-compose.minimax.yml  enhanced_model_manager.py  minimax-integration-summary.md  minimax-integration.py  requirements.txt  setup-minimax-ollama.sh  setup-minimax-production.sh  setup-minimax.sh  test-integration.sh
mcp-devtool-client/: index.html  package.json  pnpm-lock.yaml
mcp-frontend/: package-lock.json  package.json  tailwind.config.js
mcp-observatory/: index.html  package.json
mcp-observatory-enterprise/: index.html  package-lock.json
migration-tools/: .backup_env  .migration_completed
observatory-content/: index.html
orchestrator_executor_system/: DOCUMENTACION_SISTEMA_ORCHESTRATOR_EXECUTOR_COMPLETA.md  README.md  RESUMEN_IMPLEMENTACION_COMPLETA.md  api_validation_middleware.py  complete_webhook_agent_end_task_system.py  manus_webhook_receiver.py  mcp_system_testing_suite.py  sam_manus_notification_protocol.py
plandex-integration/: .env.example  README.md  docker-compose.simple.yml  docker-compose.simplified.yml  docker-compose.standalone.yml  docker-compose.yml  install-plandex.sh  manage-plandex.sh
redis/: redis.conf
restate-integration/: MIGRATION_PLAN.md  README.md  install-restate.sh  test-restate-integration.sh
sam_manus_api_reference/: SAM_MANUS_API_REFERENCE_COMPLETE.md
scripts/: agent-factory-cli.py  analyze-data.sh  auto-claude-init.sh  blockoli-indexer.py  bootstrap_context_builder.sh  claude-code-demo.sh  claude-code-setup.sh  claude-session-init.sh  claude-startup-verification.sh  cod-debate.sh  cod-service.py  common.sh  database-fallback.py  deploy.sh  deploy_integrated_a2a.sh  deploy_kubernetes.sh  deploy_load_balancer.sh  docker_build.sh  docker_build_fix.sh  docker_volume_fix.sh  enhanced-cod-terminal.py  fallback-manager.py  generate-security-report.py  health-check.sh  health_test.sh  hybrid-startup.sh  implement-local-cod.py  index-ultramcp-codebase.sh  install-uv.sh  launch-control-tower.sh  local-llm-chat.sh  mcp-admin.js  migrate_to_graphiti.py  playwright-scrape.sh  rollback-manager.py  run_local_deepseek.py  run_local_llama.py  run_local_mistral.py  security_audit.sh  semantic-search.py  (+15 more)
stagewise-integration/: README.md  install-stagewise.sh
studio-content/: index.html
test-pages/: index.html
tests/: credentialsService.test.js  mcp_testing_infrastructure.py  supabaseAdapter.test.js  test_a2a_integration.js
ultramcp-dashboard/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ultramcp-pipelines/: ultramcp_agent_factory_pipeline.py  ultramcp_cod_pipeline.py  (+1 more)
voice_system/: .gitignore  (+2 more)
(+637 files in other folders)
